import com.oocourse.elevator3.Request;

public class TransferRequest extends Request {
}
